// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <span
      class="ant-picker-prefix"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M6.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
        />
        <path
          d="M11.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M10.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
        />
        <path
          d="M15.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M8.5 2a.75.75 0 01.75.75V4h5.5V2.75a.75.75 0 011.5 0V4H18a3 3 0 013 3v11a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h1.75V2.75A.75.75 0 018.5 2zm6.25 3.5h-5.5v1.25a.75.75 0 01-1.5 0V5.5H6A1.5 1.5 0 004.5 7v1.25h15V7A1.5 1.5 0 0018 5.5h-1.75v1.25a.75.75 0 01-1.5 0V5.5zM4.5 9.75V18A1.5 1.5 0 006 19.5h12a1.5 1.5 0 001.5-1.5V9.75h-15z"
        />
      </svg>
    </span>
    <input
      autocomplete="off"
      placeholder="Select date"
      readonly=""
      size="12"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        style="width: 14px;"
      />
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 2`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <span
      class="ant-picker-prefix"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M6.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
        />
        <path
          d="M11.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M10.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
        />
        <path
          d="M15.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M8.5 2a.75.75 0 01.75.75V4h5.5V2.75a.75.75 0 011.5 0V4H18a3 3 0 013 3v11a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h1.75V2.75A.75.75 0 018.5 2zm6.25 3.5h-5.5v1.25a.75.75 0 01-1.5 0V5.5H6A1.5 1.5 0 004.5 7v1.25h15V7A1.5 1.5 0 0018 5.5h-1.75v1.25a.75.75 0 01-1.5 0V5.5zM4.5 9.75V18A1.5 1.5 0 006 19.5h12a1.5 1.5 0 001.5-1.5V9.75h-15z"
        />
      </svg>
    </span>
    <input
      autocomplete="off"
      placeholder="Select month"
      readonly=""
      size="12"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        style="width: 14px;"
      />
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 3`] = `
<div
  class="ant-picker ant-picker-rtl"
>
  <div
    class="ant-picker-input"
  >
    <span
      class="ant-picker-prefix"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M6.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
        />
        <path
          d="M11.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M10.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
        />
        <path
          d="M15.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
        />
        <path
          d="M8.5 2a.75.75 0 01.75.75V4h5.5V2.75a.75.75 0 011.5 0V4H18a3 3 0 013 3v11a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h1.75V2.75A.75.75 0 018.5 2zm6.25 3.5h-5.5v1.25a.75.75 0 01-1.5 0V5.5H6A1.5 1.5 0 004.5 7v1.25h15V7A1.5 1.5 0 0018 5.5h-1.75v1.25a.75.75 0 01-1.5 0V5.5zM4.5 9.75V18A1.5 1.5 0 006 19.5h12a1.5 1.5 0 001.5-1.5V9.75h-15z"
        />
      </svg>
    </span>
    <input
      autocomplete="off"
      placeholder="Select week"
      readonly=""
      size="12"
      title=""
      value=""
    />
    <span
      class="ant-picker-suffix"
    >
      <span
        style="width: 14px;"
      />
    </span>
  </div>
</div>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 4`] = `
<div
  class="ant-picker ant-picker-range ant-picker-rtl"
>
  <span
    class="ant-picker-prefix"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
      />
      <path
        d="M6.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
      />
      <path
        d="M11.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
      />
      <path
        d="M10.75 16a.75.75 0 01.75-.75h1a.75.75 0 010 1.5h-1a.75.75 0 01-.75-.75z"
      />
      <path
        d="M15.5 12.25a.75.75 0 000 1.5h1a.75.75 0 000-1.5h-1z"
      />
      <path
        d="M8.5 2a.75.75 0 01.75.75V4h5.5V2.75a.75.75 0 011.5 0V4H18a3 3 0 013 3v11a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h1.75V2.75A.75.75 0 018.5 2zm6.25 3.5h-5.5v1.25a.75.75 0 01-1.5 0V5.5H6A1.5 1.5 0 004.5 7v1.25h15V7A1.5 1.5 0 0018 5.5h-1.75v1.25a.75.75 0 01-1.5 0V5.5zM4.5 9.75V18A1.5 1.5 0 006 19.5h12a1.5 1.5 0 001.5-1.5V9.75h-15z"
      />
    </svg>
  </span>
  <div
    class="ant-picker-input ant-picker-input-active"
  >
    <input
      autocomplete="off"
      placeholder="Start date"
      readonly=""
      size="12"
      value=""
    />
  </div>
  <div
    class="ant-picker-range-separator"
  >
    <span
      aria-label="to"
      class="ant-picker-separator"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.53 7.47a.75.75 0 10-1.06 1.06l2.72 2.72H4a.75.75 0 000 1.5h16a.75.75 0 00.53-1.28l-4-4z"
        />
      </svg>
    </span>
  </div>
  <div
    class="ant-picker-input"
  >
    <input
      autocomplete="off"
      placeholder="End date"
      readonly=""
      size="12"
      value=""
    />
  </div>
  <div
    class="ant-picker-active-bar"
    style="right: 0px; width: 0px; position: absolute;"
  />
  <span
    class="ant-picker-suffix"
  >
    <span
      style="width: 14px;"
    />
  </span>
</div>
`;
